--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 bin/*
 dist/*
 !dist/generate_test.sh
+report/report.pdf
+report/report.aux
+report/report.log
+report/report.out
+report/report.synctex.gz
